# index

./: .gitignore  CLAUDE.md  README.md  renovate.json  taskfile.yml
.claude/: rules.md
bot/: .gitignore  CONTRACTS.md  README.md  pyproject.toml  taskfile.yml
bot/src/indexbot/: __init__.py  errors.py  exit_codes.py  model.py  ports.py
bot/src/indexbot/adapters/: __init__.py  ghcr.py  github_api.py  local_files.py  system_clock.py
bot/src/indexbot/cli/: __init__.py  _common.py  _wiring.py  announce.py  classify_pr.py  governance_check.py  main.py  reconcile.py  render.py  seed_import.py  validate.py
bot/src/indexbot/core/: __init__.py  anomaly.py  backoff.py  catalog_md.py  desc.py  diff.py  maintainers.py  observe.py  regenerate.py  registry_checks.py  render.py  validate_entry.py  validate_payload.py  verify_claims.py  version_order.py
bot/tests/: conftest.py  test_errors.py  test_exit_codes.py  test_github_api.py  test_model.py  test_registry_checks.py  test_validate_entry.py  test_validate_payload.py
bot/tests/adapters/: test_ghcr.py  test_local_files.py  test_system_clock.py
bot/tests/cli/: __init__.py  test_announce.py  test_classify_pr.py  test_common.py  test_governance_check.py  test_main.py  test_reconcile.py  test_render.py  test_seed_import.py  test_validate.py  test_wiring.py
bot/tests/core/: __init__.py  test_anomaly.py  test_backoff.py  test_catalog_md.py  test_desc.py  test_diff.py  test_maintainers.py  test_observe.py  test_regenerate.py  test_render.py  test_serializer_golden.py  test_verify_claims.py  test_version_order.py
bot/tests/fakes/: __init__.py  test_fakes.py
bot/tests/golden/render/nested_namespace/expected/wrapper_pages/regclient/: regsync.md
bot/tests/golden/render/no_desc/expected/wrapper_pages/mvdan/: shfmt.md
bot/tests/golden/render/normal/expected/wrapper_pages/kitware/: cmake.md
bot/tests/golden/render/orphan_pruned/expected/wrapper_pages/oven-sh/: bun.md
bot/tests/golden/render/png_only_logo/expected/wrapper_pages/gitlab-org/: glab.md
bot/tests/golden/serializer/: README.md
bot/tests/golden/serializer/root/: full-fields.json  minimal.json
public/: config.json  (+1 more)
(+160 files in other folders)
