[project]
name = "indexbot"
version = "0.1.0"
description = "Write path for the OCX public index (announce/reconcile/validate/render)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
indexbot = "indexbot.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexbot"]

[dependency-groups]
dev = [
    "bandit>=1.7",
    "check-jsonschema>=0.29",
    "coverage[toml]>=7.6",
    "hypothesis>=6.112",
    "mutmut>=3.2",
    "pip-audit>=2.7",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "S", "ANN"]

[tool.ruff.lint.per-file-ignores]
# Asserts are the point of a test suite (S101); fixtures like FakeGitHub's
# next-PR-number counter are private-by-convention, not a lint violation.
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=indexbot --cov-branch --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
# ponytail: no explicit `core` override. sys.monitoring (PEP 669) branch
# coverage needs Python 3.14+ (coverage.py's own env.py gate); on the 3.12
# floor, requesting core="sysmon" just prints a CoverageWarning and silently
# falls back to the classic trace core anyway — verified empirically
# (coverage 7.15.2). Revisit if the floor ever moves to 3.14 (ADR-4 BD-1/BD-3).
source = ["src"]
relative_files = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',
    '^\s*\.\.\.$',
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/indexbot/"
tests_dir = "tests/"
runner = "python -m pytest -x -q"
